--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_menu_lateral">MenuLateral</string>
+    <string name="title_activity_tela_inicio">telaInicio</string>
+    <string name="title_activity_tela_anuncio">telaAnuncio</string>
 </resources>
