--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_activity_tela_anuncio">telaAnuncio</string>
     <string name="title_activity_tela_busca">TelaBusca</string>
     <string name="title_activity_tela_atividades">TelaAtividades</string>
+    <string name="title_activity_tela_registro">BookNet</string>
 </resources>
